--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,18 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
+    "formik": "^2.1.1",
+    "node-sass": "^4.13.0",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
