switching from react-boostrap to material ui. add table, sidebar, dark mode, circular progress bar

--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
+    "clsx": "^1.0.4",
     "formik": "^2.1.1",
+    "material-table": "^1.55.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
