--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "clsx": "^1.0.4",
     "formik": "^2.1.1",
+    "jquery": "^3.4.1",
     "material-table": "^1.55.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
