--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.1.1",
     "jquery": "^3.4.1",
     "material-table": "^1.55.0",
+    "medium-zoom": "^1.0.5",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
