--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "heroku-postbuild":"cd client && npm install && npm run build",
     "eject": "react-scripts eject"
   },
   "browserslist": [
