--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "clsx": "^1.0.4",
+    "cron": "^1.8.2",
     "formik": "^2.1.1",
     "jquery": "^3.4.1",
     "material-table": "^1.55.0",
@@ -27,7 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "heroku-postbuild":"cd client && npm install && npm run build",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "eject": "react-scripts eject"
   },
   "browserslist": [
